<resources>
    <string name="app_name">Дайджест новости России</string>

    <string name="navigation_drawer_open">Открыть</string>
    <string name="navigation_drawer_close">Закрыть</string>

    <string name="search_validation_message">Строка поиска должна содержать не менее 3 символов.</string>
    <string name="search_nofound_message">Ничего не найдено, попробуйте изменить строку поиска.</string>

    <string name="news_all">Все новости</string>
    <string name="news_rbc">РБК</string>
    <string name="news_lenta">Лента</string>
    <string name="wot">WoT</string>
    <string name="news_interfax">Интерфакс</string>
    <string name="news_vesti">Вести</string>
    <string name="news_rt">РТ</string>
    <string name="news_mixednews">MixedNews</string>
    <string name="news_rg">Российская газета</string>
    <string name="news_ng">Независимая газета</string>
    <string name="news_kp">Комсомольская правда</string>
    <string name="news_km">Кирилл и Мефодий</string>
    <string name="news_odnako">Однако</string>
    <string name="news_aif">Аргументы и Факты</string>
    <string name="news_bbc_russian">BBC Russian</string>
    <string name="news_tass">ТАСС</string>
    <string name="news_nauka">Наука и Жизнь</string>
    <string name="news_politikaru">Политика.Ру</string>
    <string name="news_mk">Московский комсомолец</string>
    <string name="news_cnews">CNews</string>
    <string name="news_aftershock">Aftershock</string>
    <string name="news_mailru">Новости mail.ru</string>
    <string name="news_sportexpress">СПОРТ-ЭКСПРЕСС</string>
    <!--<string name="news_inosmi">Иносми</string>-->
    <!--<string name="news_rianovosti">РИА Новости</string>-->
    <string name="news_planetanews">Планета Новости</string>
    <string name="news_rambler">Новости Rambler.ru</string>
    <!--<string name="news_newsrucom">Новости Newsru.com</string>-->
    <string name="news_topwar">Военное обозрение</string>

    <string name="share_using">Отправить куда</string>

    <string name="menu_refresh">Обновить</string>

    <string name="news_warspot">WarSpot</string>
    <string name="news_dp">Деловой Петербург</string>
    <string name="news_unas">Сделано у нас</string>
    <string name="something_went_wrong_message">Произошла ошибка при чтении новостей</string>
    <string name="button_up_title">Наверх</string>

    <string name="notification_channell_id">news.download</string>
    <string name="download_channel_name">Загрузка новостей</string>
    <string name="download_channel_description">Канал уведомлений загрузки новостей</string>
</resources>
